Fixed: layout alignment issue with header layout 2 on tablet

--- a/assets/css/unminified/style-rtl.css
+++ b/assets/css/unminified/style-rtl.css
@@ -3597,7 +3597,7 @@ li.ast-masthead-custom-menu-items .ast-search-icon .astra-search-icon {
   text-align: left;
 }
 
-.ast-header-break-point .site-branding {
+.ast-header-break-point .site-header .main-header-bar-wrap .site-branding {
   -js-display: flex;
   display: -webkit-box;
   display: -webkit-flex;
